--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: runxindong@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   生活的艺术家
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://runxindong.github.io/" # the base hostname & protocol for your site
 #twitter_username: runxindong
 github_username:  runxindong
 
